--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,19 +8,16 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-act="active"
-    />
-
+ 
     <main>
       <div class="container">
         <a class="back-link" href="./index.html">Go back</a>
         <h1 class="main-title">
           Gallery
         </h1>
+        <ul class="gallery"></ul>
       </div>
+
     </main>
     <script type="module" src="./js/1-gallery.js"></script>
   </body>
