--- a/src/2-form.html
+++ b/src/2-form.html
@@ -8,11 +8,6 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-curr="active"
-    />
 
     <main>
       <div class="container">
@@ -20,6 +15,18 @@
         <h1 class="main-title">
           Form
         </h1>
+        <form class="feedback-form" autocomplete="off">
+          <label>
+            Email
+            <input type="email" name="email" autofocus />
+          </label>
+          <label>
+            Message
+            <textarea name="message" rows="8"></textarea>
+          </label>
+          <button type="submit">Submit</button>
+        </form>
+
       </div>
     </main>
 
