--- a/src/index.html
+++ b/src/index.html
@@ -2,19 +2,14 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vanilla App Template</title>
+    <title>Gallery</title>
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
 <header class="header">
   <div class="container">
     <nav class="nav">
-      <!-- <a class="nav-logo" href="./index.html" aria-label="Site logo">
-        <svg class="nav-logo-icon" width="100" height="30">
-          <use href="{=$icon-path}"></use>
-        </svg> -->
       </a>
       <ul class="nav-list">
         <li class="nav-item">
@@ -28,11 +23,6 @@
   </div>
 </header>
     <main>
-    
     </main>
-
- 
-
-
   </body>
 </html>
